# pylabhub

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml
add-ons/: CMakeLists.txt
add-ons/IgorXOP/: CMakeLists.txt  Info.plist.in  InfoPlist.strings  README_XOP_notes_on_Mac.md  WaveAccess.r  WaveAccess.rc  WaveAccessWinCustom.rc
cpp/: .clang-format  .clang-tidy  .gitignore  BUILD_VERIFICATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMake_Design.md  CONTRIBUTING.md  GEMINI.md  JsonConfig.cpp  README.md  README_THIRD_PARTY.md  atomicguard_revision_summary.txt  cmake-format.yaml  cmake_log.txt  pylabhub-utils summary.md
cpp/add-ons/: CMakeLists.txt
cpp/cmake/: BulkStagePrerequisites.cmake  BulkStagePrerequisites.cmake.in  BulkStageSingleDirectory.cmake.in  FindSanitizerRuntime.cmake  FindXOPSupport.cmake  FmtChronoProbe.cmake  MsvcHelper.cmake  PlatformAndCompiler.cmake  PreInstallCheck.cmake  ProjectToolChainSetup.cmake  SanitizeDebugInformation.cmake  SanitizerHelper.cmake  StageHelpers.cmake  StageIfMissing.cmake  StageRuntimeDeps.cmake  ThirdPartyPolicy.cmake  ThirdPartyPolicyAndHelper.cmake  ToplevelOptions.cmake  ToplevelThirdPartyPolicy.cmake  Version.cmake  pylabhubConfig.cmake.in  pylabhub_utils_version.rc.in
cpp/config/: hub.default.json.in
cpp/docs/: API_ISSUE_NO_CONFIG_OVERLOAD.md  CHECKSUM_ARCHITECTURE.md  CODE_QUALITY_AND_REFACTORING_ANALYSIS.md  CODE_REVIEW_GUIDANCE.md  CODE_REVIEW_JSONCONFIG.md  CODE_REVIEW_SharedMemoryHub.md  CODE_REVIEW_utils.md  COMPLETED_Items_1-4_Summary.md  C_API_TEST_POLICY.md  DATAHUB_CPP_RAII_LAYER_DESIGN_DRAFT.md  DATAHUB_DATABLOCK_CRITICAL_REVIEW.md  DATAHUB_IMPLEMENTATION_SUMMARY.md  DATAHUB_MEMORY_LAYOUT_AND_REMAPPING_DESIGN.md  DATAHUB_POLICY_AND_SCHEMA_ANALYSIS.md  DATAHUB_PROTOCOL_AND_POLICY.md  DATAHUB_TODO.md  DESIGN_VERIFICATION_CHECKLIST.md  DOC_ARCHIVE_LOG.md  DOC_STRUCTURE.md  DataExchangeHub_TechnicalDesign.md  FileLock_macOS_Bug_20251223.md  IMPLEMENTATION_GUIDANCE.md  METRICS_API_SUMMARY.md  NAME_CONVENTIONS.md  NODISCARD_DECISIONS.md  PHASE4_COMPLETION_REPORT.md  PRODUCER_CONSUMER_API_CONSISTENCY.md  PROJECT_CODE_REVIEW.md  README_CMake_Design.md  README_ThirdParty_CMake.md  README_Versioning.md  README_corelib.md  README_testing.md  README_utils.md  REFACTORING_PLAN_2026-02-15.md  SESSION_SUMMARY_PHASE3_2026-02-15.md  SharedMemoryHub_Implementation_Status.md  SharedMemoryHub_QuickStart.md  TEST_AUDIT_DETAILED.md  TEST_FRAMEWORK_IMPROVEMENTS.md  (+25 more)
cpp/examples/: RAII_LAYER_USAGE_EXAMPLE.md  README.md  datahub_consumer_example.cpp  datahub_producer_example.cpp  hub_active_service_example.cpp  raii_layer_example.cpp
cpp/include/: FileLock.hpp  JsonConfig.hpp  PythonLoader.hpp  atomic_guard.hpp  debug_info.hpp  format_tools.hpp  platform.hpp  recursion_guard.hpp  scope_guard.hpp
cpp/src/: CMakeLists.txt  PythonLoader.cpp  hubshell.cpp
cpp/tests/: CMakeLists.txt  test_atomicguard.cpp  test_filelock.cpp  test_jsonconfig.cpp  test_logger.cpp  test_logger_multiprocess.cpp  test_main.cpp  test_main.h  test_preamble.h  test_recursionguard.cpp  workers.h
cpp/tools/: format.sh  pack_source.ps1  pack_source.sh
examples/: CMakeLists.txt  README.md  cpp_processor_template.cpp  datahub_consumer_example.cpp  datahub_producer_example.cpp  hub_active_service_example.cpp  hub_health_example.cpp  raii_layer_example.cpp  schema_example.cpp  simple_loopback.py
src/: CMakeLists.txt  hubshell.cpp
src/consumer/: CMakeLists.txt  consumer_api.cpp  consumer_api.hpp  consumer_config.cpp  consumer_config.hpp  consumer_fields.hpp  consumer_init.cpp  consumer_init.hpp  consumer_main.cpp  consumer_role_host.cpp  consumer_role_host.hpp  consumer_schema.hpp  consumer_script_host.cpp  consumer_script_host.hpp  lua_consumer_host.cpp  lua_consumer_host.hpp
src/hub_python/: admin_shell.cpp  admin_shell.hpp  hub_script.cpp  hub_script.hpp  hub_script_api.cpp  hub_script_api.hpp  pylabhub_module.cpp  pylabhub_module.hpp  python_interpreter.cpp  python_interpreter.hpp
src/include/: plh_base.hpp  plh_datahub.hpp  plh_datahub_client.hpp  plh_platform.hpp  plh_service.hpp  plh_version_registry.hpp
src/plh_hub/: CMakeLists.txt  plh_hub_main.cpp
src/plh_role/: CMakeLists.txt  plh_role_main.cpp
src/processor/: CMakeLists.txt  lua_processor_host.cpp  lua_processor_host.hpp  processor_api.cpp  processor_api.hpp  processor_config.cpp  processor_config.hpp  processor_fields.hpp  processor_init.cpp  processor_init.hpp  processor_main.cpp  processor_role_host.cpp  processor_role_host.hpp  processor_script_host.cpp  processor_script_host.hpp
src/producer/: CMakeLists.txt  lua_producer_host.cpp  lua_producer_host.hpp  producer_api.cpp  producer_api.hpp  producer_config.cpp  producer_config.hpp  producer_fields.hpp  producer_init.cpp  producer_init.hpp  producer_main.cpp  producer_role_host.cpp  producer_role_host.hpp  producer_schema.hpp  producer_script_host.cpp  producer_script_host.hpp
src/pylabhub/: __init__.py  __main__.py  _cli.py
src/scripting/: CMakeLists.txt  engine_factory.cpp  engine_factory.hpp  engine_module_params.cpp  engine_module_params.hpp  hub_api_python.cpp  json_py_helpers.hpp  lua_engine.cpp  lua_engine.hpp  lua_role_host_base.cpp  lua_role_host_base.hpp  lua_state.cpp  lua_state.hpp  metrics_lua.hpp  metrics_pydict.hpp  native_engine.cpp  native_engine.hpp  python_engine.cpp  python_engine.hpp  python_helpers.hpp  python_interpreter_module.cpp  python_interpreter_module.hpp  python_role_host_base.cpp  python_role_host_base.hpp  python_script_host.cpp  python_script_host.hpp  role_bootstrap.cpp  role_bootstrap.hpp  role_host_core.cpp  role_host_core.hpp  role_host_helpers.hpp  role_main_helpers.hpp  schema_utils.hpp  script_engine.cpp  script_engine.hpp  script_host_helpers.hpp
src/utils/: CMakeLists.txt  portable_atomic_shared_ptr.hpp
tests/: CMakeLists.txt
tests/test_framework/: CMakeLists.txt  admin_wire_client.h  binary_lifecycle.h  broker_test_harness.cpp  broker_test_harness.h  broker_wire_client.cpp  broker_wire_client.h  (+21 more)
(+2246 files in other folders)
