# =============================================================================
# pyLabHub — Python packaging via scikit-build-core
#
# This pyproject.toml drives two things:
#   1. CMake build (via scikit-build-core) → platform wheel with prebuilt C++
#      binaries, shared libraries, headers, and tools.
#   2. A thin Python package (python/pylabhub/) providing version info, path
#      accessors, and the 'pylabhub prepare-runtime' command.
#
# The wheel is NOT a Python extension module — it is a C++ application suite
# that embeds Python 3.14 for scripting.  The Python runtime is NOT bundled
# in the wheel (PyPI size limit); users download it post-install via
# 'pylabhub prepare-runtime'.  One wheel serves all host Python versions (>= 3.9).
#
# Build locally:
#   pip install .                          # builds via CMake, installs wheel
#   pip wheel . --no-build-isolation       # produces .whl in current dir
#
# For development (CMake only, no wheel):
#   cmake -S . -B build && cmake --build build
# =============================================================================

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pylabhub"
version = "0.1.0a0"
description = "High-performance IPC framework for scientific data acquisition — C++ core with Python scripting"
readme = "README.md"
authors = [{name = "Quan Qing"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = [
    "data-acquisition",
    "ipc",
    "shared-memory",
    "zeromq",
    "lab-automation",
    "scientific-instruments",
    "real-time",
]

[project.urls]
Homepage = "https://github.com/Qing-LAB/pylabhub"
Repository = "https://github.com/Qing-LAB/pylabhub"
Issues = "https://github.com/Qing-LAB/pylabhub/issues"

# Console entry-point wrappers — these delegate to the real C++ binaries
# located in the installed data directory (pylabhub/data/bin/).
[project.scripts]
pylabhub           = "pylabhub._cli:main"
pylabhub-hubshell  = "pylabhub._cli:hubshell"
pylabhub-producer  = "pylabhub._cli:producer"
pylabhub-consumer  = "pylabhub._cli:consumer"
pylabhub-processor = "pylabhub._cli:processor"
pylabhub-pyenv     = "pylabhub._cli:pyenv"

# ---------------------------------------------------------------------------
# scikit-build-core configuration
# ---------------------------------------------------------------------------
[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"

# CMake install() places the staged tree at CMAKE_INSTALL_PREFIX.
# scikit-build-core maps that into the wheel at this location.
wheel.install-dir = "pylabhub/data"

# The thin Python shim lives under python/.
wheel.packages = ["python/pylabhub"]

# Force settings appropriate for wheel packaging.
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_XOP=OFF",
    "-DPYLABHUB_PREPARE_PYTHON_ENV=OFF",
    "-DPYLABHUB_CREATE_INSTALL_TARGET=ON",
    "-DPYLABHUB_STAGE_ON_BUILD=ON",
    "-DPYLABHUB_ENABLE_CLANG_TIDY=OFF",
    "-DPYLABHUB_BUILD_EXAMPLES=OFF",
    "-DPYLABHUB_ENABLE_DEBUG_MESSAGES=OFF",
]

# sdist: include everything needed to build from source.
# NOTE: third_party/ contains git submodules — sdist requires
# `git submodule update --init --recursive` before building.
sdist.include = [
    "CMakeLists.txt",
    "cmake/**",
    "src/**",
    "python/**",
    "third_party/**",
    "tools/**",
    "share/**",
    "LICENSE",
    "README.md",
]
sdist.exclude = [
    "build*/**",
    "dist/**",
    "tests/**",
    ".github/**",
    "docs/archive/**",
    "docs/todo/**",
    "docs/tech_draft/**",
    "docs/code_review/**",
]

# Strip binaries in wheel to reduce size.
install.strip = true
